Install自动安装程序修改更新

--- a/pc/application/admin/command/Install/install.html
+++ b/pc/application/admin/command/Install/install.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{:__('Installing FastAdmin')}</title>
+    <title>{:__('Installing Ponyexam')}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <meta name="renderer" content="webkit">
 
@@ -171,7 +171,7 @@
             </g>
         </svg>
     </h1>
-    <h2>{:__('Installing FastAdmin')}</h2>
+    <h2>{:__('Installing Ponyexam')}</h2>
     <div>
 
         <form method="post">
@@ -207,7 +207,7 @@
 
                 <div class="form-field">
                     <label>{:__('Mysql Prefix')}</label>
-                    <input type="text" name="mysqlPrefix" value="fa_">
+                    <input type="text" name="mysqlPrefix" value="po_">
                 </div>
 
                 <div class="form-field">
